fix shifting content bug when scrollbar shifts on/off

--- a/angularjs/assets/css/app.css
+++ b/angularjs/assets/css/app.css
@@ -38,40 +38,45 @@
 }
 
 /* line 1, ../../source/sass/global/_global.scss */
+html {
+  margin-left: calc(100vw - 100%);
+}
+
+/* line 4, ../../source/sass/global/_global.scss */
 body {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   background-color: #e8e8e8;
   margin: 0;
 }
-/* line 6, ../../source/sass/global/_global.scss */
+/* line 9, ../../source/sass/global/_global.scss */
 body ul {
   padding-left: 0;
   margin-top: 0;
 }
-/* line 9, ../../source/sass/global/_global.scss */
+/* line 12, ../../source/sass/global/_global.scss */
 body ul li {
   list-style-type: none;
 }
 
-/* line 18, ../../source/sass/global/_global.scss */
+/* line 21, ../../source/sass/global/_global.scss */
 h1,
 .h1 {
   font-size: 1rem;
 }
 
-/* line 22, ../../source/sass/global/_global.scss */
+/* line 25, ../../source/sass/global/_global.scss */
 h2,
 .h2 {
   font-size: 24px;
   font-size: 2.4rem;
 }
 
-/* line 34, ../../source/sass/global/_global.scss */
+/* line 37, ../../source/sass/global/_global.scss */
 .left {
   float: left;
 }
 
-/* line 37, ../../source/sass/global/_global.scss */
+/* line 40, ../../source/sass/global/_global.scss */
 .right {
   float: right;
 }
@@ -168,12 +173,12 @@ table tr td {
   text-align: center;
   padding-right: 60px;
 }
-/* line 29, ../../source/sass/global/_global.scss */
+/* line 32, ../../source/sass/global/_global.scss */
 .navigation:before, .navigation:after {
   content: " ";
   display: table;
 }
-/* line 30, ../../source/sass/global/_global.scss */
+/* line 33, ../../source/sass/global/_global.scss */
 .navigation:after {
   clear: both;
 }
@@ -224,12 +229,12 @@ table tr td {
 .cv__wrapper {
   padding: 20px;
 }
-/* line 29, ../../source/sass/global/_global.scss */
+/* line 32, ../../source/sass/global/_global.scss */
 .cv__wrapper:before, .cv__wrapper:after {
   content: " ";
   display: table;
 }
-/* line 30, ../../source/sass/global/_global.scss */
+/* line 33, ../../source/sass/global/_global.scss */
 .cv__wrapper:after {
   clear: both;
 }
@@ -247,12 +252,12 @@ table tr td {
 .cv__user {
   padding: 10px 0 5px 0;
 }
-/* line 29, ../../source/sass/global/_global.scss */
+/* line 32, ../../source/sass/global/_global.scss */
 .cv__user:before, .cv__user:after {
   content: " ";
   display: table;
 }
-/* line 30, ../../source/sass/global/_global.scss */
+/* line 33, ../../source/sass/global/_global.scss */
 .cv__user:after {
   clear: both;
 }
@@ -311,12 +316,12 @@ table tr td {
   font-size: 11px;
   padding: 20px 0 10px 0;
 }
-/* line 29, ../../source/sass/global/_global.scss */
+/* line 32, ../../source/sass/global/_global.scss */
 .cv__cta:before, .cv__cta:after {
   content: " ";
   display: table;
 }
-/* line 30, ../../source/sass/global/_global.scss */
+/* line 33, ../../source/sass/global/_global.scss */
 .cv__cta:after {
   clear: both;
 }
