--- a/angularjs/source/sass/global/_global.scss
+++ b/angularjs/source/sass/global/_global.scss
@@ -1,3 +1,6 @@
+html {
+	margin-left: calc(100vw - 100%);
+}
 body { 
 	font-family:$body-font-family;
 	background-color: $body-bg;
